--- a/template.html
+++ b/template.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <div class="btn btn-info">Hellow world</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
