--- a/template.html
+++ b/template.html
@@ -7,13 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
     <title>Hello, world!</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <div class="btn btn-info">Hellow world</div>
+    <div class="btn btn-info"> <i class="fab fa-facebook-square fa-2x"></i> Hellow world</div>
+  
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
